force-app/main/default/objects/VS_AwardInvestmentCost__c/VS_AwardInvestmentCost__c.object-meta.xml
<CustomObject>
    <description>수주품의에 포함되는 투자비를 관리하는 Obj</description>
    <label>Award Investment Cost</label>
    <nameField>
        <displayFormat>AIC-{0000000}</displayFormat>
        <label>Award Investment Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Investment Costs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>