force-app/main/default/objects/VS_AwardInvestmentCost__c/fields/isRumpsum__c.field-meta.xml
<CustomField>
    <fullName>isRumpsum__c</fullName>
    <label>isRumpsum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>