force-app/main/default/objects/VS_AwardInvestmentCost__c/fields/l_AwardApproval__c.field-meta.xml
<CustomField>
    <fullName>l_AwardApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Approval</label>
    <referenceTo>VS_AwardApproval__c</referenceTo>
    <relationshipLabel>Award Investment Costs</relationshipLabel>
    <relationshipName>Award_Investment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>