force-app/main/default/objects/VS_AwardInvestmentCost__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>개발비</fullName>
            </value>
            <value>
                <fullName>금형비</fullName>
            </value>
            <value>
                <fullName>PLC Volume</fullName>
            </value>
            <value>
                <fullName>Amortizing volume</fullName>
            </value>
            <value>
                <fullName>ED&amp;D-UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>