force-app/main/default/objects/VS_AwardInvestmentCost__c/fields/TypeDetail__c.field-meta.xml
<CustomField>
    <fullName>TypeDetail__c</fullName>
    <label>Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>